--- a/about.html
+++ b/about.html
@@ -74,7 +74,7 @@
     </div>
 
     <div class="pptp">
-        <img src="/images/pptp.png" alt="">
+        <img src="images/pptp.png" alt="">
         <p class="pptp-text">
             People Protecting the Planet is a new Movement by the Happy Heart Cafe to encourage people to make changes to their lives for the benefit of the planet: We will be having a range of workshops and events - so please join us and make a difference. <br>            DID YOU KNOW? We sell a range of bamboo lunch boxes and cups with silicone lids for £5 each. And we are waiting for Stainless Steel straws to come in... <br> ALSO: We are collecting Crisp Packets and will be taking them to the local Walkers
             Crisp Packet recycling point.</p>
