--- a/contact.html
+++ b/contact.html
@@ -70,7 +70,9 @@
                 </ul>
             </div>
             <div class="letusknow">
-                <h5>If you have any suggestions or require any additional information on our workshops or events, please get in touch via email or by telephone </h5>
+                <h5>
+
+                    If you have any suggestions or require any additional information on our workshops and events, or to inquire about booking the venue for a private function please get in touch via email or by telephone </h5>
 
                 <a href="mailto:hello@happyheartcafe.co.uk"><button class="btn">Send Email</button></a>
             </div>
