--- a/events.html
+++ b/events.html
@@ -90,7 +90,7 @@
         <p>(please check current availabilty with the cafe)</p>
 
 
-        <img src="/images/guitar-night.jpeg" alt="guitar night photo" height="300px" width="200px">
+        <img src="images/guitar-night.jpeg" alt="guitar night photo" height="300px" width="200px">
         <h4>Guitar Live</h4>
         <p>Join the "Guitar Live" group on the second Tuesday of the month 8 - 10 PM. all players welcome no matter your skill level. Bring your guitar and perform for the group, join in a group song or just listen.
             <span>Refreshments are available all evening. </span></p>
@@ -113,7 +113,7 @@
 
         <hr>
 
-        <img src="/images/psychic.jpg" alt="" srcset="" height="250px" width="300px">
+        <img src="images/psychic.jpg" alt="" srcset="" height="250px" width="300px">
         <h4>Psychic Night</h4>
         <p>Every fourth Friday from 7:30 PM we hold a very popular psychic evening with a local psychic medium, Tracey Harvey. <br> Tickets are £10 and must be brought in advance <br> *please book early as this event always sells out.*
         </p>
@@ -135,7 +135,7 @@
         <hr>
 
 
-        <img src="/images/fiction-night.jpeg" alt="" width="300px" height="200px">
+        <img src="images/fiction-night.jpeg" alt="" width="300px" height="200px">
 
         <h4>Fiction Night</h4>
 
