--- a/events.html
+++ b/events.html
@@ -62,19 +62,19 @@
     <div class="weekly">
         <h3>Our Weekly Events</h3>
 
-        <div class="knit event-row">
+        <div class="knit ">
             <h4>Knit & Natter</h4>
-            <img class="knit-img" src="images/knit.jpeg" alt="">
+            <img class="knit-img" src="images/knit.jpeg" alt="" width="400px">
             <p class="info">The Knit and Natter Group is looking for new members. Come along on a Wednesday morning, bring your knitting or crochet. If you don't know how to crochet or knit there will be someone to guide you.
             </p>
 
         </div>
 
-        <div class="meditation event-row">
+        <div class="meditation ">
             <h4>Drop-in Meditation class</h4>
             <img src="images/budha.jpeg" alt="">
 
-            <p>Every Wednesday Evening from 7:15 PM - 9-45 PM the class is run by Solihull Buddhists (an offshoot of the Birmingham Buddhists Group in Moseley). No need to book, just turn up with an open mind wearing comfortable clothes. Donations for the
+            <p class="info">Every Wednesday Evening from 7:15 PM - 9-45 PM the class is run by Solihull Buddhists (an offshoot of the Birmingham Buddhists Group in Moseley). No need to book, just turn up with an open mind wearing comfortable clothes. Donations for the
                 class are invited(£8 suggested).
             </p>
 
